--- a/index.html
+++ b/index.html
@@ -50,9 +50,20 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Jennifer Foley</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/JediJen" target="_blank"
+            >Jennifer Foley</a
+          >
+          and is
+          <a
+            href="https://github.com/JediJen/sheCodes-weather-app/tree/main"
+            target="_blank"
+          >
+            on GitHub</a
+          >
+          and
+          <a href="https://glittering-fairy-6f83d2.netlify.app/" target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
